deployments/kube/local/ingress.yaml
# Copyright 2020 IBM. 

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: smartthings-ing
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200"
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "HEAD, PUT, GET, POST, OPTIONS, PATCH, DELETE"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: "http01"
    certmanager.k8s.io/acme-http01-edit-in-place: "true"    
spec:
  tls:
  - hosts:
    - smartthings.com
    secretName: smartthings-tls
  rules:
  - host: auth.smartthings.com
    http:
      paths:
      - backend:
          serviceName: keycloak-svc
          servicePort: 8888
  - host: accounts.smartthings.com
    http:
      paths:
      - backend:
          serviceName: smartthings-account-svc
          servicePort: 80
  - host: iot.smartthings.com
    http:
      paths:
      - backend:
          serviceName: smartthings-iot-svc
          servicePort: 80
  - host: www.smartthings.com
    http:
      paths:
      - backend:
          serviceName: smartthings-web-svc
          servicePort: 80       
  - http:
      paths:
      - backend:
          serviceName: smartthings-web-svc
          servicePort: 80
