deployments/kube/local/oc-routes.yaml
apiVersion: v1
kind: Route
metadata:
  name: frontend
spec:
  host: www.smartthings.com
  to:
    kind: Service
    name: frontend
